--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
-      background: url('images/B.png') no-repeat center top;
+      background: url('images/B.PNG') no-repeat center top;
       background-size: cover;
       background-attachment: fixed;
       background-repeat: no-repeat;
@@ -218,8 +218,6 @@
   </div>
 </nav>
 
-
-  <!-- SVG Gelombang -->
   <svg class="wave" viewBox="0 0 1440 150" preserveAspectRatio="none">
     <path d="M0,30 C180,80 360,0 540,40 C720,80 900,0 1080,40 C1260,80 1440,10 1440,10 L1440,150 L0,150 Z" fill="#ffffff"></path>
   </svg>
@@ -227,7 +225,7 @@
 <!-- HERO SECTION-->
  
 <section class="hero d-flex align-items-center justify-content-center text-center text-white position-relative">
-  <img src="images/B.png" alt="Garuda Background" class="bg-img">
+  <img src="images/B.PNG" alt="Garuda Background" class="bg-img">
   
   <div class="container position-relative z-1">
     <h1 class="display-4 fw-bold">Mahasiswa Politeknik Negeri Medan</h1>
